Agents header  - extra space at the bottom - fix

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
@@ -287,7 +287,7 @@ $arrow-color: #000;
 }
 
 .agents-table {
-  margin-bottom: 30px;
+  margin-bottom: 30px;getget
   thead {
     tr {
       background:    $table-header-bg;
@@ -297,6 +297,9 @@ $arrow-color: #000;
         padding: 5px 10px;
       }
     }
+  }
+  &.agents-table-head{
+    margin-bottom:0;
   }
 }
 
